--- a/less/zoom.less
+++ b/less/zoom.less
@@ -133,3 +133,10 @@
     right: -74px;
     opacity: 0;
 }
+
+
+/* overlay
+--------------------------------------------------------------------------*/
+.jgallery .zoom-container .overlay .imageLoaderPositionAbsolute {
+    top: 50% !important;
+}
